--- a/modelo.html
+++ b/modelo.html
@@ -16,7 +16,7 @@
             Aqui mensagem
         </div>
         <div id="foto">
-            <img id="imagem" src="fotomanha.png" alt="Foto do dia">
+            <img id="imagem" alt="Foto do dia">
         </div>
     </section>
     <footer>
